[gd_scene load_steps=5 format=2]

[ext_resource path="res://0 - General/Sprites/UmaruVerse.ogv" type="VideoStream" id=1]
[ext_resource path="res://0 - General/Scripts/Splash.gd" type="Script" id=2]
[ext_resource path="res://0 - General/Sounds/Rewind - Ofshane.mp3" type="AudioStream" id=3]
[ext_resource path="res://0 - General/Sprites/UI/play.png" type="Texture" id=4]

[node name="Splash" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
ratio = 3.0
stretch_mode = 0

[node name="VideoPlayer" type="VideoPlayer" parent="AspectRatioContainer"]
margin_top = -120.0
margin_right = 720.0
margin_bottom = 120.0
stream = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Musica"

[node name="PlayBtn" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = 128.0
texture_normal = ExtResource( 4 )

[connection signal="finished" from="AspectRatioContainer/VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="pressed" from="PlayBtn" to="." method="_on_PlayBtn_pressed"]
